Use database connection everywhere (#19)
* Use database connection everywhere

* Make FusekiTestingServer final